--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,2 +1,8 @@
 // @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
+.container{
+	background-color: #FFE001 !important;
+	color: white; 
+	color: red;
+	border-bottom: 2;
+}
