--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -6,3 +6,12 @@
 	color: red;
 	border-bottom: 2;
 }
+
+.btn-primary{
+    background-color: #FFE000 !important;
+    border:none !important;
+    transition: all 0.2s ease;
+}
+.btn-primary:hover{
+    background-color: #FBC02D !important;
+}
