--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,17 +1,331 @@
-// @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+/*--- BASE STRUCTURE --*/
+
+body, html{
+	width: 100%;
+	height: 100%;
+}
+
+body{
+    font-family: 'Lato';
+    font-size: 20px;
+    margin:0;
+    padding: 0;
+}
+
+@font-face {
+    font-family: NexaBlack;
+    src: url(../fonts/NexaBlack.otf);
+}
+
+@font-face {
+    font-family: NexaBold;
+    src: url(../fonts/NexaBold.otf);
+}
+
+@font-face {
+    font-family: Lato;
+    src: url(../fonts/Lato-Light.ttf);
+}
+
+@font-face {
+    font-family: OstrichB;
+    src: url(../fonts/OstrichSans-Bold.otf);
+}
+
+.flex{
+	display: flex;
+}
+
+.justify-center{
+	justify-content: center;
+}
+
+.items-center{
+	align-items: center;
+}
+
+/*--- HEADERS ---*/
+
+h1{
+	color: #6A1B9A;
+	font-family: NexaBlack;
+}
+
+h2{
+	color: #6A1B9A;
+	font-family: NexaBold;
+	margin-top: 0;
+}
+
+/*--- CONTAINERS ---*/
 
 .container{
-	background-color: #FFE001 !important;
-	color: white; 
-	color: red;
 	border-bottom: 2;
 }
 
+/*--- NAV BAR ---*/
+
+.navbar-default{
+	margin-bottom: 0;
+}
+
+.navbar-brand{
+    margin:0;
+    padding:0;
+    display: flex;
+    align-items: center;
+}
+.navbar-brand img{
+    width: 120px;
+}
+
+.navbar-separator{
+	width: 100%;
+	background-color: #9C27B0;
+	height: 2px;
+	margin-top: 0;
+	margin-bottom: 1em;
+}
+
+/*--- LOGIN ---*/
+
+.panel{
+	border: 1px solid #6A1B9A;
+}
+
+.panel-heading{
+	background: #9C27B0;
+    background: -webkit-linear-gradient(right, #9C27B0, #6A1B9A);
+    background: -o-linear-gradient(right, #9C27B0, #6A1B9A);
+    background: linear-gradient(to left, #9C27B0, #6A1B9A);   
+    color: #ffffff !important;
+    font-family: NexaBold;    
+    text-transform: uppercase;
+}
+
+input[type="checkbox"]{
+	width: 20px;
+	height: 20px;
+}
+
 .btn-primary{
-    background-color: #FFE000 !important;
+    background-color: #6A1B9A;
     border:none !important;
-    transition: all 0.2s ease;
+    transition: all 0.4s ease;
+    font-size: 20px;
 }
 .btn-primary:hover{
-    background-color: #FBC02D !important;
+    background-color: #9C27B0;
+}
+
+.btn-link{
+	font-size: 18px;
+}
+
+/*---- HOME ----*/
+
+/*- SEARCH -*/
+
+[role=button]{
+	display: none;
+}
+
+.select2-container .select2-choice{
+	padding: 10px;
+	background-color: #fff;
+}
+
+.block-spacer{
+    background-color: #FFE000;
+    height: 3px;
+    width: 100%;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.combo-box{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    background-color: #424242;
+    margin-bottom: 5px;
+    color: white;
+}
+
+.panel-btn{
+    margin: 10px 0;
+    padding: 10px;
+    border-radius: 3px;
+    transition: all 0.2s ease;
+}
+
+.panel-btn a{
+    color: #fff;
+    font-family: NexaBold;
+    font-size: 20px;
+}
+
+.panel-btn a:hover{
+    text-decoration: none;
+}
+
+.addnew-btn{
+    padding: 10px;
+    color: #FFE000;
+    font-size: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    font-family: NexaBold;
+    text-align: right;
+    border-radius: 2px;
+    transition: all 0.2s ease;
+}
+
+.addnew-btn a{
+	color: #FFE000;
+	text-decoration: none;
+	text-align: right;
+}
+
+.addnew-btn:hover{
+	text-decoration: underline;
+}
+
+/*--- INDEXES ---*/
+
+.btn-s{
+    font-size: 20px !important;
+    padding: 0px;
+    background-color: white !important;
+    border: none !important;
+}
+
+.icon-btn{
+    font-size: 28px;
+}
+
+.icon-edit{
+    color: #FFE000;
+}
+
+.icon-delete{
+    color: #F44336;
+}
+
+.user{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.new-btn{
+    background-color: #FFE000;
+    font-size: 16px;
+    font-family: Lato;
+    padding: 7px;
+    color: #212121;
+    border-radius: 3px;
+    margin-right: 0;
+}
+
+.new-btn:hover{
+    text-decoration: none;
+}
+
+.section-header{
+    border:none !important;
+    box-shadow: none !important; 
+    border-bottom: 0px !important;
+}
+
+.minor-header{
+    background-color: #511B73 !important;
+    color: white !important;
+    font-size: 18px !important;
+}
+
+hr{
+	margin: 3px 0 8px 0;
+}
+
+.btn-lesson{
+	padding: 0px;
+	font-size: 16px;
+	padding: 0 10px 0 10px;
+}
+
+.pp-image{
+    margin: 1em auto;
+    text-align: center;
+    width: 150px;
+}
+
+.pp-image img{
+	width: 100%;
+}
+
+.pp-name{
+    text-align: center;
+    font-family: OstrichB;
+    font-size: 30px;
+}
+
+
+.pole-group{
+	text-align: center;
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+}
+
+.solo-pole{
+	text-align: center;
+}
+
+.pole-number{
+	font-size: 16px;
+}
+
+.pole-free{
+	color: #8BC34A;
+	font-family: 'Lato';
+	font-size: 18px;
+}
+
+.pole-occupied{
+	color: #F44336;
+	font-family: 'Lato';
+	font-size: 18px;
+}
+
+.mirror-space{
+	width: 80%;
+	background-color: #E1BEE7;
+	padding: 5px;
+	text-align: center;
+	margin: 0 auto;
+}
+
+/*--- FOOTER ---*/
+
+.logo-vertical{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none !important;
+    box-shadow: none !important;
+}
+
+.dir-vertical{
+    border: none !important;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: none !important;
+}
+
+.dir-vertical p{
+    text-align: center;
 }
